objects/Order.object
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>All_Products_Activated__c</fullName>
        <formula>IF( Count_of_Order_Products__c =  Count_of_Activated_Order_Products__c, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>All Products Activated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Count_of_Order_Products__c</fullName>
        <label>Count of Order Products</label>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_Activated_Order_Products__c</fullName>
        <label>Count of Activated Order Products</label>
        <summaryFilterItems>
            <field>OrderItem.SBQQ__Activated__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>